--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "nyan": "mocha --reporter nyan test/test.js",
     "tests": "mocha test/test.js",
     "test": "npm run lint && npm run tests",
-    "server": "http-server -p 9000 dist",
-    "start": "open http://localhost:9000/",
-    "http": "npm run start && npm run server",
+    "start": "http-server -p 9000 dist",
+    "http": "open http://localhost:9000/",
+    "server": "npm run http && npm run start",
     "browser": "browserify dist/web.js -i express -i preq -i xregexp -o dist/bundle.js && browserify test/test.js -i express -i preq -i xregexp -o test/bundle.js",
     "minify": "uglifyjs dist/bundle.js -o dist/bundle.js",
     "open": "open dist/index.html",
